--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -15,7 +15,7 @@
         app:showAsAction="never"
         />
     <item
-        android:title="modiicar"
+        android:title="perfil"
         android:id="@+id/main_logout"
         app:showAsAction="never"
         />
