--- a/app/src/main/res/layout/activity_chat_grupal.xml
+++ b/app/src/main/res/layout/activity_chat_grupal.xml
@@ -27,18 +27,26 @@
             android:layout_width="45dp"
             android:layout_height="38dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
+
             android:layout_alignParentBottom="true"
             android:onClick="send"
             android:src="@drawable/ic_send"/>
 
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="20dp"
+    android:layout_alignTop="@+id/button2">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/editText2"
-            android:layout_width="362dp"
+            android:layout_width="270dp"
             android:layout_height="40dp"
             android:hint="mensaje"
-
             android:background="@drawable/input1"
             android:layout_alignTop="@+id/button2"
             android:layout_alignParentStart="true"
@@ -48,8 +56,25 @@
             android:layout_marginTop="-3dp"
             android:layout_marginEnd="3dp"
             android:layout_marginRight="3dp"
+            android:paddingLeft="7dp"
+
             android:layout_toStartOf="@+id/button2"
             android:layout_toLeftOf="@+id/button2" />
+        <ImageView
+            android:id="@+id/idarchivos"
+            android:layout_marginTop="4dp"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/clip">
+
+        </ImageView>
+
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+        
+
 
     </RelativeLayout>
 </LinearLayout>
