--- a/app/src/main/res/layout/all_single_profile_display.xml
+++ b/app/src/main/res/layout/all_single_profile_display.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                     android:id="@+id/all_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=""
+                    android:hint="name"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:layout_weight="5"
