--- a/app/src/main/res/layout/item_alumnos_tutor.xml
+++ b/app/src/main/res/layout/item_alumnos_tutor.xml
@@ -29,18 +29,29 @@
                 android:layout_gravity="center"/>
 
             <LinearLayout
-                android:layout_width="266dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/idnombrealu"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:text="Nombre Alunno"
                     android:textStyle="bold" />
+                <ImageView
+                    android:foregroundGravity="right"
+                   android:layout_marginLeft="190dp"
+                    android:id="@+id/idcelular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/cel"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center|right">
+
+                </ImageView>
 
             </LinearLayout>
 
