--- a/app/src/main/res/layout/item_chat2.xml
+++ b/app/src/main/res/layout/item_chat2.xml
@@ -6,12 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         app:cardCornerRadius="5dp"
-        android:layout_marginLeft="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,12 +26,9 @@
                 android:textColor="@color/blue_link"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/nname2"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content">
-
             </TextView>
-
-
             <TextView
                 android:id="@+id/txtmensaje2"
                 android:layout_width="wrap_content"
@@ -41,11 +42,7 @@
                 android:text="mensaje"
                 />
 
-
-
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
