--- a/app/src/main/res/layout/activity_chat_grupal.xml
+++ b/app/src/main/res/layout/activity_chat_grupal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.tutorv3usu.ChatGrupal"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,21 +7,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-       >
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recylermensaje"
             android:layout_width="match_parent"
-            android:layout_height="606dp">
+            android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-
+<!--
         <ImageView
             android:id="@+id/button2"
             android:layout_width="45dp"
@@ -37,6 +33,8 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="20dp"
     android:layout_alignTop="@+id/button2">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,7 +72,44 @@
     </LinearLayout>
 </androidx.cardview.widget.CardView>
         
+-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:padding="5dp"
+        android:background="@drawable/white_gray_border_top"
+        >
 
 
-    </RelativeLayout>
-</LinearLayout>
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Escribir..."
+            android:inputType="textMultiLine"
+            android:padding="10dp"/>
+        <ImageView
+            android:id="@+id/idarchivos"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/clip">
+
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/button2"
+            android:onClick="send"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_send"
+            android:padding="5dp"/>
+            </LinearLayout>
+
+</RelativeLayout>
