--- a/app/src/main/res/layout/activity_chat_grupal2.xml
+++ b/app/src/main/res/layout/activity_chat_grupal2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,20 +9,17 @@
     tools:context="com.example.tutorv3usu.VistaAlumno.ChatGrupal2">
 
 
-    <RelativeLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recylermensaje2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+
+            android:layout_height="match_parent"
+            android:layout_marginBottom="55dp">
 
         </androidx.recyclerview.widget.RecyclerView>
-
+<!--
 
         <ImageView
             android:id="@+id/button22"
@@ -53,5 +50,43 @@
             android:layout_toStartOf="@+id/button22"
             android:layout_toLeftOf="@+id/button22" />
 
-    </RelativeLayout>
-</LinearLayout>
+  -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:padding="5dp"
+        android:background="@drawable/white_gray_border_top"
+        >
+
+
+        <EditText
+            android:id="@+id/editText22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="Escribir..."
+            android:inputType="textMultiLine"
+            android:padding="10dp"/>
+        <ImageView
+
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/clip">
+
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/button22"
+            android:onClick="send1"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_send"
+            android:padding="5dp"/>
+    </LinearLayout>
+</RelativeLayout>
