--- a/app/src/main/res/layout/activity_tutor_inico.xml
+++ b/app/src/main/res/layout/activity_tutor_inico.xml
@@ -170,7 +170,7 @@
                                 <ImageView
                                     android:layout_width="40dp"
                                     android:layout_height="40dp"
-                                    android:src="@drawable/otro" />
+                                    android:src="@drawable/chat" />
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
