--- a/app/src/main/res/layout/item_alumnos_tutor.xml
+++ b/app/src/main/res/layout/item_alumnos_tutor.xml
@@ -29,31 +29,42 @@
                 android:layout_gravity="center"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/idnombrealu"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:text="Nombre Alunno"
                     android:textStyle="bold" />
-                <ImageView
-                    android:foregroundGravity="right"
-                   android:layout_marginLeft="190dp"
-                    android:id="@+id/idcelular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/cel"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="center|right">
 
-                </ImageView>
+
+                <TextView
+                    android:id="@+id/idapealu"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Nombre Alunno"
+                   />
 
             </LinearLayout>
+
+            <ImageView
+                android:foregroundGravity="right"
+                android:layout_marginLeft="65dp"
+                android:id="@+id/idcelular11"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/cel"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center|right">
+
+            </ImageView>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
