--- a/app/src/main/res/layout/item_reunion_por_fecha.xml
+++ b/app/src/main/res/layout/item_reunion_por_fecha.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -29,23 +29,30 @@
                 android:layout_gravity="center"/>
 
             <LinearLayout
-                android:layout_width="266dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/idtuloevento"
-                    android:layout_width="match_parent"
+                    android:id="@+id/idtuloevento5"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="2dp"
                     android:layout_marginRight="10dp"
                     android:text="Nombre Evento"
                     android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/idcurso3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Fecha"
+                    />
 
             </LinearLayout>
 
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+</LinearLayout>
