--- a/app/src/main/res/layout/item_reuniones_curso.xml
+++ b/app/src/main/res/layout/item_reuniones_curso.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -34,18 +34,37 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/idtuloevento"
+                    android:id="@+id/idtuloevento4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
                     android:text="Nombre Evento"
                     android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/idfecha4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Fecha"
+                    />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:id="@+id/idasistencia"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/asistencia">
+
+                </ImageView>
 
             </LinearLayout>
 
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-</RelativeLayout>
+</LinearLayout>
